@@ -24,7 +24,7 @@ $_lang['articles.all'] = 'All';
 $_lang['articles.article'] = 'Article';
 $_lang['articles.article_alias'] = 'Alias (Permalink)';
 $_lang['articles.article_content'] = 'Content';
-$_lang['articles.article_create'] = 'Create New Article';
+$_lang['articles.article_create'] = 'New Article';
 $_lang['articles.article_delete_multiple'] = 'Delete Multiple Articles';
 $_lang['articles.article_delete_multiple_confirm'] = 'Are you sure you want to delete the selected Articles?';
 $_lang['articles.article_edit'] = 'Edit Article';
@@ -40,6 +40,7 @@ $_lang['articles.article_title'] = 'Article Title';
 $_lang['articles.article_unpublish'] = 'Unpublish';
 $_lang['articles.articles'] = 'Articles';
 $_lang['articles.articles_err_ns_multiple'] = 'Please select at least one Article.';
+$_lang['articles.articles_import'] = 'Import Articles';
 $_lang['articles.articles_manage'] = 'Manage Articles';
 $_lang['articles.articles_none'] = 'No articles yet!';
 $_lang['articles.articles_search'] = 'Search Articles...';
@@ -66,6 +67,10 @@ $_lang['articles.container_undelete'] = 'Undelete Articles Container';
 $_lang['articles.container_unpublish'] = 'Unpublish Articles Container';
 $_lang['articles.content'] = 'Content';
 $_lang['articles.filter_ellipsis'] = 'Filter...';
+$_lang['articles.import_service'] = 'Import From';
+$_lang['articles.import_service_desc'] = 'Select the Service or Application that you would like to import from.';
+$_lang['articles.import_wp_file'] = 'WordPress Export WXR File';
+$_lang['articles.import_wp_file_desc'] = 'Select the WordPress WXR (XML) file that you get when you export from WordPress.';
 $_lang['articles.publishedon'] = 'Published On';
 $_lang['articles.published'] = 'Published';
 $_lang['articles.publishing_information'] = 'Publishing Information';
